@@ -3,8 +3,6 @@ package mcjty.lostcities.setup;
 import mcjty.lostcities.api.ILostCityProfileSetup;
 import mcjty.lostcities.config.ProfileSetup;
 import mcjty.lostcities.network.PacketHandler;
-import mcjty.lostcities.worldgen.LostCityFeature;
-import mcjty.lostcities.worldgen.LostCitySphereFeature;
 import mcjty.lostcities.worldgen.lost.cityassets.AssetRegistries;
 import net.minecraftforge.common.MinecraftForge;
 import net.minecraftforge.fml.event.lifecycle.FMLCommonSetupEvent;
@@ -32,8 +30,6 @@ public class ModSetup {
         ProfileSetup.setupProfiles();
 
         PacketHandler.registerMessages("lostcities");
-        LostCityFeature.registerConfiguredFeatures();
-        LostCitySphereFeature.registerConfiguredFeatures();
 
         MinecraftForge.EVENT_BUS.register(new ForgeEventHandlers());
         // @todo 1.14
