@@ -1,3 +1,6 @@
+Upcoming:
+- Better feature registration
+
 1.19-6.0.9:
 - In worldstyles it is now possible to specify settings for city spheres. Including the possibility to predefine how the center of a sphere looks and possibly a part that is generated there
 - The maximum numbers of floors and cellars has been raised significantly
